--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,15 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
+            "env": {"name":"CUDA_VISIBLE_DEVICES", "value":"0"},
             "args": ["--cfg_file=/mnt/data/dash01/ssl_ups/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml",
                 "--extra_tag=debug_mode",
                 "--pretrained_model=/mnt/data/dash01/ssl_ups/output/cfgs/kitti_models/pv_rcnn/split_0.01_1/ckpt/checkpoint_epoch_80.pth",
-                "--dbinfos=kitti_dbinfos_train_0.01_1_37.pkl"],
-            "cwd": "${workspaceFolder}/tools"
+                "--dbinfos=kitti_dbinfos_train_0.01_1_37.pkl",
+                "--split=train_0.01_1"],
+            "cwd": "${workspaceFolder}/tools",
+            
+
             
         }
     ]
