--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -203,6 +203,7 @@ MODEL:
             REG_FG_THRESH: 0.55
 
         LOSS_CONFIG:
+            UL_INTERVAL_ROI_IOU_SCORE_TYPE: 'interval-only' # two options: `all` or `interval-only`
             CLS_LOSS: BinaryCrossEntropy
             REG_LOSS: smooth-l1
             CORNER_LOSS_REGULARIZATION: True
