Partial impl. for unlabeled rois/pls samplers.

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -192,9 +192,9 @@ MODEL:
             ROI_PER_IMAGE: 128
             FG_RATIO: 0.5
 
+            CONSISTENCY_SAMPLER_TYPE: gt_scores_sampler
             SAMPLE_ROI_BY_EACH_CLASS: True
             CLS_SCORE_TYPE: roi_iou
-            ENABLE_HYBRID: True
             CLS_WEIGHT: 0.35
             CLS_FG_THRESH: 0.75
             CLS_BG_THRESH: 0.25
