DA-22 Adding testset Eval during train and classwise metrics

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -225,6 +225,7 @@ MODEL:
 
         EVAL_METRIC: kitti
         ENABLE_KITTI_EVAL: True
+        EVAL_DURING_TRAIN: True
         NMS_CONFIG:
             MULTI_CLASSES_NMS: False
             NMS_TYPE: nms_gpu
