DA-25 Pre-loss filtering and log metrics. * Added filtering step before computing the final losses for cls and reg for rcnn in consistency mode.

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -161,6 +161,8 @@ MODEL:
         CLASS_AGNOSTIC: True
         ENABLE_RELIABILITY: False
         ENABLE_RCNN_CONSISTENCY: False
+        CONSISTENCY_PRE_LOSS_CLS_PRED_FILTERING_THRESH: [0.9]
+        CONSISTENCY_PRE_LOSS_CLS_LABEL_FILTERING_THRESH: [0.9]
         SHARED_FC: [256, 256]
         CLS_FC: [256, 256]
         REG_FC: [256, 256]
