DA-18 Adds a simple visualization function to better debug the scene.

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -159,6 +159,7 @@ MODEL:
     ROI_HEAD:
         NAME: PVRCNNHead
         CLASS_AGNOSTIC: True
+        ENABLE_VIS: False
         ENABLE_RELIABILITY: False
         ENABLE_RCNN_CONSISTENCY: False
         CONSISTENCY_PRE_LOSS_CLS_PRED_FILTERING_THRESH: [0.9]
