--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -200,12 +200,14 @@ MODEL:
             CLS_WEIGHT: 0.35
             CLS_FG_THRESH: 0.75
             CLS_BG_THRESH: 0.25
+            UNLABELED_CLS_FG_THRESH: 0.75
+            UNLABELED_CLS_BG_THRESH: 0.25
             CLS_BG_THRESH_LO: 0.1
             HARD_BG_RATIO: 0.8
 
             REG_FG_THRESH: 0.55
+            UNLABELED_REG_FG_THRESH: 0.9
             UNLABELED_SAMPLER_TYPE: None
-            UNLABELED_REG_FG_THRESH: 0.7
 
         LOSS_CONFIG:
             UL_INTERVAL_ROI_IOU_SCORE_TYPE: 'interval-only' # two options: `all` or `interval-only`
