--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -162,6 +162,7 @@ MODEL:
         ENABLE_VIS: False
         ENABLE_RELIABILITY: False
         ENABLE_RCNN_CONSISTENCY: False
+        ENABLE_SOFT_TEACHER: False
         CONSISTENCY_PRE_LOSS_CLS_PRED_FILTERING_THRESH: [0.9]
         CONSISTENCY_PRE_LOSS_CLS_LABEL_FILTERING_THRESH: [0.9]
         SHARED_FC: [256, 256]
@@ -180,7 +181,7 @@ MODEL:
                 NMS_TYPE: nms_gpu
                 MULTI_CLASSES_NMS: False
                 NMS_PRE_MAXSIZE: 1024
-                NMS_POST_MAXSIZE: 128
+                NMS_POST_MAXSIZE: 100
                 NMS_THRESH: 0.7
 
         ROI_GRID_POOL:
@@ -239,7 +240,7 @@ MODEL:
 
     THRESH: [0.8, 0.4, 0.4]
     UNLABELED_SUPERVISE_CLS: True
-    UNLABELED_SUPERVISE_OBJ: True
+    UNLABELED_SUPERVISE_OBJ: False
     UNLABELED_SUPERVISE_REFINE: True
     UNLABELED_WEIGHT: 1.0
     SEM_THRESH: [0.2, 0.0, 0.0]
