DA-7 Config cleanup.

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -163,8 +163,6 @@ MODEL:
         ENABLE_RELIABILITY: False
         ENABLE_RCNN_CONSISTENCY: False
         ENABLE_SOFT_TEACHER: False
-        CONSISTENCY_PRE_LOSS_CLS_PRED_FILTERING_THRESH: [0.9]
-        CONSISTENCY_PRE_LOSS_CLS_LABEL_FILTERING_THRESH: [0.9]
         SHARED_FC: [256, 256]
         CLS_FC: [256, 256]
         REG_FC: [256, 256]
@@ -240,7 +238,7 @@ MODEL:
 
     THRESH: [0.8, 0.4, 0.4]
     UNLABELED_SUPERVISE_CLS: True
-    UNLABELED_SUPERVISE_OBJ: False
+    UNLABELED_SUPERVISE_OBJ: True
     UNLABELED_SUPERVISE_REFINE: True
     UNLABELED_WEIGHT: 1.0
     SEM_THRESH: [0.2, 0.0, 0.0]
@@ -251,7 +249,7 @@ MODEL:
 OPTIMIZATION:
     BATCH_SIZE_PER_GPU: 1 #2
     EVAL_BATCH_SIZE_PER_GPU: 8
-    NUM_EPOCHS: 2
+    NUM_EPOCHS: 60
 
     OPTIMIZER: adam_onecycle
     LR: 0.01
