DA-35 set default UNLABELED_SUPERVISE_OBJ to False .

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -238,7 +238,7 @@ MODEL:
 
     THRESH: [0.8, 0.4, 0.4]
     UNLABELED_SUPERVISE_CLS: True
-    UNLABELED_SUPERVISE_OBJ: True
+    UNLABELED_SUPERVISE_OBJ: False
     UNLABELED_SUPERVISE_REFINE: True
     UNLABELED_WEIGHT: 1.0
     SEM_THRESH: [0.2, 0.0, 0.0]
