DA-35 Refactored ROI augmentation

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -228,6 +228,7 @@ MODEL:
         
         ROI_AUG:
             ENABLE: False
+            AUG_TYPE: roi_aug_ros
             ROS:
                 SCALE_RANGE: [0.9, 1.1]
                 ROTATE_RANGE: [0, 0] 
