DA-35 Sharpen RCNN class labels and Calibrate IoUs by default

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -209,8 +209,8 @@ MODEL:
             UNLABELED_REG_FG_THRESH: 0.55
             UNLABELED_SAMPLER_TYPE: None
             UNLABELED_SAMPLE_EASY_BG: False
-            UNLABELED_SHARP_RCNN_CLS_LABELS: False
-            UNLABELED_USE_CALIBRATED_IOUS: False
+            UNLABELED_SHARP_RCNN_CLS_LABELS: True
+            UNLABELED_USE_CALIBRATED_IOUS: True
             UNLABELED_TEACHER_SCORES_FOR_RVM: False
 
         LOSS_CONFIG:
