Bugfix: Set USE_SUM_OVER_LOSS=False by default

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -264,7 +264,7 @@ MODEL:
     NO_NMS: False
     EMA_ALPHA: 0.999
     EMA_UPDATE_INTERVAL: 1 
-    USE_SUM_OVER_LOSS: True
+    USE_SUM_OVER_LOSS: False
 
 
 OPTIMIZATION:
