DA-35 Add ulb_cls_dist_loss.

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -163,6 +163,7 @@ MODEL:
         ENABLE_RELIABILITY: False
         ENABLE_RCNN_CONSISTENCY: False
         ENABLE_SOFT_TEACHER: False
+        ENABLE_ULB_CLS_DIST_LOSS: False
         ENABLE_EVAL: True
         METRICS_PRED_TYPES: [roi_pl_gt, pl_gt_metrics_before_filtering]
         SHARED_FC: [256, 256]
@@ -226,7 +227,8 @@ MODEL:
                 'rcnn_cls_weight': 1.0,
                 'rcnn_reg_weight': 1.0,
                 'rcnn_corner_weight': 1.0,
-                'code_weights': [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
+                'code_weights': [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0],
+                ulb_cls_dist_weight: 0.2
             }
         
         ROI_AUG:
