--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -214,6 +214,7 @@ MODEL:
             UNLABELED_SHARP_RCNN_CLS_LABELS: True
             UNLABELED_USE_CALIBRATED_IOUS: True
             UNLABELED_TEACHER_SCORES_FOR_RVM: False
+            UNLABELED_INTERVAL_WITH_TEACHER_SCORES: False
             USE_ULB_CLS_FG_THRESH_FOR_LB: False
             DISABLE_ST_WEIGHTS: False
 
