--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -268,7 +268,7 @@ MODEL:
     NO_NMS: False
     EMA_ALPHA: 0.999
     EMA_UPDATE_INTERVAL: 1 
-    REDUCE_LOSS: 'sum'
+    REDUCE_LOSS: 'mean'
     STORE_SCORES_IN_PKL: False
 
 
