--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -212,8 +212,7 @@ MODEL:
                 'rcnn_cls_weight': 1.0,
                 'rcnn_reg_weight': 1.0,
                 'rcnn_corner_weight': 1.0,
-                'code_weights': [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0],
-                ulb_cls_dist_weight: 0.2
+                'code_weights': [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
             }
 
 
@@ -223,8 +222,6 @@ MODEL:
         OUTPUT_RAW_SCORE: False
 
         EVAL_METRIC: kitti
-        ENABLE_KITTI_EVAL: False
-        TEST_EVAL_DURING_TRAIN: False
         NMS_CONFIG:
             MULTI_CLASSES_NMS: False
             NMS_TYPE: nms_gpu
@@ -240,7 +237,6 @@ MODEL:
     SUPERVISE_MODE: 0
     NO_NMS: False
     EMA_ALPHA: 0.999
-    EMA_UPDATE_INTERVAL: 1 
 
 
 OPTIMIZATION:
