Set default PL threshold in arguement parser

--- a/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
+++ b/tools/cfgs/kitti_models/pv_rcnn_ssl_60.yaml
@@ -239,7 +239,7 @@ MODEL:
 
 
 OPTIMIZATION:
-    BATCH_SIZE_PER_GPU: 1 #2
+    BATCH_SIZE_PER_GPU: 1
     EVAL_BATCH_SIZE_PER_GPU: 8
     NUM_EPOCHS: 60
 
